# MCStream

./: Cargo.toml  FORMAT.md  README.md
examples/: simple.rs
src/: chunk.rs  compression.rs  error.rs  header.rs  lib.rs  main.rs  nbt.rs  packer.rs  palette.rs  types.rs  unpacker.rs  utils.rs
