[package]
name = "mcstream"
version = "0.1.0"
edition = "2021"
description = "MCStream (MCS) 格式实现 - Minecraft建筑的高效二进制流式存储格式"
authors = ["Nethard Studio"]

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0"
flate2 = "1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
zstd = "0.13.0"
lz4 = "1.24.0"
brotli = "3.4.0"
rayon = "1.8.1"
clap = { version = "4.4.18", features = ["derive"] }
tempfile = "3.10.0"

[lib]
name = "mcstream"
path = "src/lib.rs"

[[bin]]
name = "mcs"
path = "src/main.rs" 
